# pyclipr

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  setup.py
.github/workflows/: pythonpublish.yml
examples/: example.py  example_z_value.py
python/pyclipr/: __init__.py  __init__.pyi  module.cpp
